# StrategyGame

./: CMakeLists.txt  README.md  __all_sources__.txt  build_errors.txt  build_log.txt  build_output.txt  butoane.psd  copilot-instructions.md  tiles.psd
aiscripts/: aggressive_ai.scr  basic_ai.scr  doomsday_ai.scr  tank_rush_ai.scr
include/: AIController.h  AIScript.h  ActionBar.h  AnimatedSprite.h  Animation.h  Application.h  Brute.h  Building.h  Constants.h  DebugConsole.h  EditorPanel.h  Effect.h  EffectsManager.h  Entity.h  EntityData.h  EntityDrawing.h  EntityWorld.h  FogOfWar.h  FontManager.h  Game.h  GameScreen.h  GameStatistics.h  IGameContext.h  IUnitContext.h  IdGenerator.h  InputHandler.h  LightTank.h  Map.h  MapEditorScreen.h  MapSerializer.h  MathUtil.h  MenuScreen.h  Minimap.h  Pathfinder.h  Player.h  PlayerActions.h  PlayerController.h  Projectile.h  Renderer.h  ResourceManager.h  (+11 more)
maps/: Collapse.stmap  Massacre.stmap  TestMap.stmap
src/: AIController.cpp  AIScript.cpp  ActionBar.cpp  AnimatedSprite.cpp  Animation.cpp  Application.cpp  Brute.cpp  Building.cpp  DebugConsole.cpp  EditorPanel.cpp  Effect.cpp  EffectsManager.cpp  Entity.cpp  EntityData.cpp  EntityDrawing.cpp  EntityWorld.cpp  FogOfWar.cpp  FontManager.cpp  Game.cpp  GameScreen.cpp  GameStatistics.cpp  InputHandler.cpp  LightTank.cpp  Map.cpp  MapEditorScreen.cpp  MapSerializer.cpp  MenuScreen.cpp  Minimap.cpp  Pathfinder.cpp  Player.cpp  PlayerActions.cpp  Projectile.cpp  Renderer.cpp  ResourceManager.cpp  ResourceNode.cpp  Soldier.cpp  SoundManager.cpp  TerrainRenderer.cpp  TextureManager.cpp  Turret.cpp  (+4 more)
